--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/material": "^12.1.3",
     "@angular/platform-browser": "~12.1.1",
@@ -33,6 +34,7 @@
     "angular2-highcharts": "^0.5.5",
     "chart.js": "^3.5.0",
     "chartjs-plugin-zoom": "^1.1.1",
+    "firebase": "^8.9.1",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
